[project]
name = "rlcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "tqdm>=4.67.1",
]

[project.scripts]
rlcore = "rlcore.main:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
